WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
242509
PROGRESSION (
252224@main
): [ iOS Debug ][ macOS Debug ] Two TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptions tests are a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=242509
Summary
PROGRESSION (252224@main): [ iOS Debug ][ macOS Debug ] Two TestWebKitAPI.Web...
Karl Rackler
Reported
2022-07-08 08:48:55 PDT
Description: TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMinimun TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMaximumDefault The first failure and crash that I saw on the dashboard were on 7/7/2022 at
252217@main
. These tests were consistently crashing on Debug and consistently failing on Release for iOS and macOS.
252224@main
was a progressive fix for the iOS and macOS Release consistent failures, but did not resolve the consistent crashing on iOS and macOS Debug. REPRODUCTION STEPS I can reproduce this on
252269@main
ToT Command: run-api-tests --debug --no-build --verbose TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMinimun Result: * Same as crash log below * History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMinimun&test=TestWebKitAPI.WebProcessCache.ReusedCrashedCachedWebProcess&limit=50000
Crash Log: TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMaximumDefault ASSERTION FAILED: rpEntity.identifier /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm(653) : WebCore::PublicKeyCredentialCreationOptions::RpEntity publicKeyCredentialRpEntity(_WKPublicKeyCredentialRelyingPartyEntity *) 1 0x108d79bd9 WTFCrash 2 0x144386e9b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x145888007 publicKeyCredentialRpEntity(_WKPublicKeyCredentialRelyingPartyEntity*) 4 0x145887955 +[_WKWebAuthenticationPanel convertToCoreCreationOptionsWithOptions:] 5 0x105a46e05 TestWebKitAPI::WebAuthenticationPanel_PublicKeyCredentialCreationOptionsMaximumDefault_Test::TestBody() 6 0x105b8d8cb void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 7 0x105b51d1a void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 8 0x105b51c63 testing::Test::Run() 9 0x105b52de1 testing::TestInfo::Run() 10 0x105b53e84 testing::TestSuite::Run() 11 0x105b62f9b testing::internal::UnitTestImpl::RunAllTests() 12 0x105b9280b bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 13 0x105b6295a bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 14 0x105b62845 testing::UnitTest::Run() 15 0x105202091 RUN_ALL_TESTS() 16 0x105202026 TestWebKitAPI::TestsController::run(int, char**) 17 0x105b1f812 main 18 0x117db151e TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMinimun * Same as above *
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-08 08:49:46 PDT
<
rdar://problem/96674140
>
pascoe@apple.com
Comment 2
2022-07-08 09:13:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2225
EWS
Comment 3
2022-07-08 09:15:43 PDT
Committed
252274@main
(0832284c78b8): <
https://commits.webkit.org/252274@main
> Reviewed commits have been landed. Closing PR #2225 and removing active labels.
pascoe@apple.com
Comment 4
2022-07-08 09:16:39 PDT
Reopening for a fix to re-enable the test.
pascoe@apple.com
Comment 5
2022-07-08 10:03:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2228
EWS
Comment 6
2022-07-08 10:08:16 PDT
Committed
252280@main
(e54af3fce340): <
https://commits.webkit.org/252280@main
> Reviewed commits have been landed. Closing PR #2228 and removing active labels.
Karl Rackler
Comment 7
2022-07-11 14:18:31 PDT
After landing
252280@main
I have yet to see new test runs with TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMinimun and TestWebKitAPI.WebProcessCache.ReusedCrashedCachedWebProcess is a consistent timeout.
pascoe@apple.com
Comment 8
2022-07-12 09:34:56 PDT
Both are passing:
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMinimum&test=TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptionsMaximumDefault&limit=50000
TestWebKitAPI.WebProcessCache.ReusedCrashedCachedWebProcess is an unrelated test.
pascoe@apple.com
Comment 9
2022-07-12 09:35:51 PDT
I corrected the typo in one of the test titles, Minimun -> Minimum.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug