TestWebKitAPI.WebAuthenticationPanel.PublicKeyCredentialCreationOptions test gardening https://bugs.webkit.org/show_bug.cgi?id=242509 rdar://problem/96674140

Unreviewed, gardening

* Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
(publicKeyCredentialRpEntity):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/252280@main